# whizwordz

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt
app/src/main/java/com/example/whizwordz/: AudioEngine.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: arrays.xml
